Fixed card shifting with description

--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -14,3 +14,7 @@
       width: 150px;
       margin: 0 auto;
   }
+
+  .description {
+      margin: 0;
+  }
